# jni-example

./: README.md
c_call_java/: CMakeLists.txt  MyJavaClass.java  main.cpp  readme.md
